[gd_scene load_steps=25 format=3 uid="uid://bk8ysvnqydlf0"]

[ext_resource type="Texture2D" uid="uid://btiemfdkrv8h3" path="res://assets/sprites/slime_green.png" id="1_j32b6"]
[ext_resource type="Script" path="res://scripts/enemies/green_slime.gd" id="1_jc2ae"]
[ext_resource type="PackedScene" uid="uid://d2w0hqqfsyub0" path="res://scenes/killzone.tscn" id="2_bsr2d"]
[ext_resource type="AudioStream" uid="uid://b6d4s2fnb4up6" path="res://assets/sounds/hurt.wav" id="4_aigh8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cifd3"]
atlas = ExtResource("1_j32b6")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvvln"]
atlas = ExtResource("1_j32b6")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb73d"]
atlas = ExtResource("1_j32b6")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycnld"]
atlas = ExtResource("1_j32b6")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykss3"]
atlas = ExtResource("1_j32b6")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdxb4"]
atlas = ExtResource("1_j32b6")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl0ea"]
atlas = ExtResource("1_j32b6")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ag82"]
atlas = ExtResource("1_j32b6")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_75lr3"]
atlas = ExtResource("1_j32b6")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsonj"]
atlas = ExtResource("1_j32b6")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcjaq"]
atlas = ExtResource("1_j32b6")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnolt"]
atlas = ExtResource("1_j32b6")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_yh2eo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cifd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvvln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb73d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycnld")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykss3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdxb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl0ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ag82")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75lr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsonj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcjaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnolt")
}],
"loop": true,
"name": &"wake",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdfds"]
size = Vector2(12, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8c4r"]
size = Vector2(14, 7)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mit6v"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_m6hpo"]
radius = 5.0

[sub_resource type="Animation" id="Animation_pmsqx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Killzone/KillzoneCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RayCastFront:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RayCastDown:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hurtbox/HurtboxCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HurtSound:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AnimatedSprite2D:animation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("AnimatedSprite2D:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_oglfh"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Killzone/KillzoneCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RayCastFront:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RayCastDown:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hurtbox/HurtboxCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HurtSound:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(-0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AnimatedSprite2D:animation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(-0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("AnimatedSprite2D:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ori1p"]
_data = {
"RESET": SubResource("Animation_pmsqx"),
"death": SubResource("Animation_oglfh")
}

[node name="GreenSlime" type="CharacterBody2D"]
script = ExtResource("1_jc2ae")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_yh2eo")
animation = &"hurt"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_jdfds")

[node name="Killzone" parent="." instance=ExtResource("2_bsr2d")]
position = Vector2(0, -6)
collision_layer = 4

[node name="KillzoneCollision" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_d8c4r")

[node name="RayCastFront" type="RayCast2D" parent="."]
material = SubResource("CanvasItemMaterial_mit6v")
position = Vector2(0, -6)
target_position = Vector2(8, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 20)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="HurtboxCollision" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_m6hpo")

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_aigh8")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ori1p")
}

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
